--- a/011.mini store/assets/styles/app.css
+++ b/011.mini store/assets/styles/app.css
@@ -36,6 +36,7 @@ button {
   padding: 0.5rem 2rem;
   font: inherit;
   cursor: pointer;
+  box-shadow: 1px 2px 5px black;
 }
 
 button:focus {
@@ -47,26 +48,26 @@ button:active {
   background: #790fa3;
   border-color: #790fa3;
 }
-
 .cart {
-  margin: 5rem 2rem;
   border: 2px solid #540075;
-  border-radius: 10px;
-  padding: 2rem;
   display: flex;
+  position: fixed;
   justify-content: space-between;
+  width: 100vw;
+  padding: 2rem 8rem;
+  background-color: #540075   ;
 }
 
 .cart h2 {
   margin: 0;
   font-size: 1.5rem;
-  color: #540075;
+  color: white;
 }
 
 .product-list {
   list-style: none;
   margin: 0 2rem;
-  padding: 0;
+  padding-top: 7rem;
 }
 
 .product-item {
@@ -79,7 +80,7 @@ button:active {
 .product-item img {
   width: 100%;
   height: 20rem;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
 .product-item__content {
