--- a/011.mini store/assets/styles/app.css
+++ b/011.mini store/assets/styles/app.css
@@ -9,6 +9,9 @@ html {
 body {
   margin: 0;
 }
+abbr {
+  text-decoration: none;
+}
 
 header {
   position: fixed;
@@ -65,30 +68,41 @@ button:active {
 }
 
 .product-list {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr;
   list-style: none;
-  margin: 0 2rem;
-  padding-top: 7rem;
+  margin: 0 1rem;
+  padding-top: 6rem;
 }
 
 .product-item {
   margin: 2rem auto;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  width: 50rem;
-  max-width: 90%;
+  width: 20rem;
 }
 
 .product-item img {
   width: 100%;
-  height: 20rem;
+  height: 10rem;
   object-fit: scale-down;
 }
 
 .product-item__content {
-  padding: 1rem;
-  text-align: center;
+  padding: 2rem;
+  text-align: left;
 }
-
-.product-item h2,
-.product-item h3 {
+.product-item h2 {
   margin: 0 0 1rem 0;
+  font-size: 16px;
+}
+.product-item .title {
+  text-align: center;
+  font-size: 20px;
+  /* padding-right: 2rem; */
+}
+.product-item .price {
+  color: #790fa3;
+}
+.product-item button.add-to-cart-btn {
+  width: 100%;
 }
